[workspace]
resolver = "2"

members = [
    "soroban-env-host",
    "soroban-env-guest",
    "soroban-env-common",
    "soroban-env-common/tests/no_std",
    "soroban-env-macros",
    "soroban-builtin-sdk-macros",
    "soroban-test-wasms",
    "soroban-synth-wasm",
    "soroban-bench-utils",
    "soroban-simulation",
]

exclude = ["soroban-test-wasms/wasm-workspace"]

[workspace.package]
# NB: When bumping the major version make sure to clean up the
# code guarded by `unstable-*` features to make it enabled
# unconditionally.
version = "21.0.0"
rust-version = "1.74.0"

[workspace.dependencies]
soroban-env-common = { version = "=21.0.0", path = "soroban-env-common", default-features = false }
soroban-env-guest = { version = "=21.0.0", path = "soroban-env-guest" }
soroban-env-host = { version = "=21.0.0", path = "soroban-env-host" }
soroban-env-macros = { version = "=21.0.0", path = "soroban-env-macros" }
soroban-builtin-sdk-macros = { version = "=21.0.0", path = "soroban-builtin-sdk-macros" }
# NB: this must match the wasmparser version wasmi is using
wasmparser = "=0.116.1"

# NB: When updating, also update the version in rs-soroban-env dev-dependencies
[workspace.dependencies.hcnet-xdr]
version = "=20.1.1"
git = "https://github.com/HashCash-Consultants/rs-hcnet-xdr"
rev = "a500e15840377b238d34645937aa66dd50abed4b"
default-features = false

[workspace.dependencies.wasmi]
package = "soroban-wasmi"
version = "=0.31.1-soroban.20.0.1"
git = "https://github.com/HashCash-Consultants/wasmi"
rev = "2329ceae38c43c15607d71474d7be7776f428b3c"

# [patch."https://github.com/hcnet/rs-hcnet-xdr"]
# hcnet-xdr = { path = "../rs-hcnet-xdr/" }
# [patch."https://github.com/hcnet/wasmi"]
# soroban-wasmi = { path = "../wasmi/crates/wasmi/" }
# soroban-wasmi_core = { path = "../wasmi/crates/core/" }

[profile.release]
lto = true

[profile.test-opt]
inherits = "test"
opt-level = 3
debug = false
