[package]
name = "soroban-bench-utils"
description = "Utilities for benchmarking soroban."
homepage = "https://github.com/HashCash-Consultants/rs-soroban-env"
repository = "https://github.com/HashCash-Consultants/rs-soroban-env"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true
publish = false

[dependencies]
soroban-env-common = { workspace = true }
tracking-allocator = "=0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4.7"
